fix(core): nve-panel capturing pointer-events even when collapsed

--- a/projects/elements/src/panel/panel.css
+++ b/projects/elements/src/panel/panel.css
@@ -30,12 +30,17 @@
   background: none;
 }
 
+:host(:not([closable]):not(:state(expanded))) {
+  pointer-events: none;
+}
+
 :host(:not([closable]):not(:state(expanded))) slot {
   display: none;
 }
 
 :host(:not([closable]):not(:state(expanded))) nve-icon-button {
   position: initial;
+  pointer-events: auto;
 }
 
 :host([closable]:not(:state(expanded))) {
